--- a/javascript-basic.html
+++ b/javascript-basic.html
@@ -5,7 +5,10 @@
 <body>
 
 <script type="text/javascript">
-  alert('hi');
+  /*alert('hi');*/
+  var name = prompt("What is your name?");
+  alert("Nice to meet you, " + name);
+
 </script>
 
 </body>
