--- a/javascript-basic.html
+++ b/javascript-basic.html
@@ -6,8 +6,9 @@
 
 <script type="text/javascript">
   /*alert('hi');*/
-  var name = prompt("What is your name?");
-  alert("Nice to meet you, " + name);
+  var first_name = prompt("What is your first name?");
+  var last_name = prompt("What's your last name?");
+  alert("Nice to meet you, " + first_name + " " + last_name);
 
 </script>
 
